--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "brain.js": "^2.0.0-alpha.9",
+    "cheerio": "^1.0.0-rc.3",
+    "lodash": "^4.17.15",
     "puppeteer": "^1.20.0"
+  },
+  "scripts": {
+    "start": "node ./scrapingLottoNumber.js"
   }
 }
