--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "brain.js": "^2.0.0-alpha.9",
     "cheerio": "^1.0.0-rc.3",
     "lodash": "^4.17.15",
-    "puppeteer": "^1.20.0"
+    "puppeteer": "^1.20.0",
+    "terminal-kit": "^1.31.4"
   },
   "scripts": {
     "start": "node ./scrapingLottoNumber.js"
