--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "terminal-kit": "^1.31.4"
   },
   "scripts": {
-    "start": "node ./scrapingLottoNumber.js"
+    "start": "node --max-old-space-size=8192 ./scrapingLottoNumber.js",
+    "test": "node ./brainTest.js"
   }
 }
